fixes margin on mobile view for avatar

--- a/css/styles.css
+++ b/css/styles.css
@@ -11362,6 +11362,20 @@ html {
     font-size: 1.5rem;
   }
 }
+
+@media (max-width: 600px) {
+  .masthead {
+    padding-top: calc(6rem + 104px);
+    padding-bottom: 6rem;
+  }
+  .masthead .masthead-heading {
+    font-size: 4rem;
+    line-height: 3.5rem;
+  }
+  .masthead .masthead-subheading {
+    font-size: 1.5rem;
+  }
+}
 .portfolio .portfolio-item {
   cursor: pointer;
   position: relative;
